# aoc-2026

./: .gitignore  aoc-2026.opam  dune-project
lib/: day1_safe_secret.ml  day2_gift_shop.ml  day3_lobby.ml  day4_ext_printing_department.ml  day4_printing_department.ml  day5_cafeteria.ml  day6_trash_compaction.ml  day7_laboratories.ml  day8_playground.ml  day9_movie_theater.ml  dune
test/: dune
