(lang dune 3.20)

(name aoc-2026)

(generate_opam_files true)

(source
 (github yabalaban/aoc-2026))

(authors "Alexander Balaban <drop-me-a-message@gmail.com>")

(maintainers "Alexander Balaban <drop-me-a-message@gmail.com>")

(package
 (name aoc-2026)
 (synopsis "Advent of Code – 2026")
 (description "Bold attempt to finish AoC with Ocaml")
 (depends ocaml)
 (tags
  ("adventofcode" "beginner")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
